@@ -1,3 +1,5 @@
+2006/3/28 -- released version 20060328_trunk
+
 2006/3/27 -- released version 20060327_trunk
 
 2006/3/26 -- released version 20060326_trunk
